--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
                                             <p><a href="https://japanview.tv/id/topics/19960/">
                                                     Pelopor Universitas Internasional! Universitas Takushoku Penghubung
                                                     Jepang dan Indonesia </a>
-                                                <div class="excerpt">
-                                                    Berdiri sejak tahun 1900, Universitas Takushoku berfokus dalam
-                                                    pengembangan sumber... </div>
+                                            <div class="excerpt">
+                                                Berdiri sejak tahun 1900, Universitas Takushoku berfokus dalam
+                                                pengembangan sumber... </div>
                                             </p>
                                         </div>
                                         <div class="jv-article-date">
@@ -407,8 +407,9 @@
                                         <div class="jv-article-txt">
                                             <p><a href="https://japanview.tv/id/topics/16059/">
                                                     Belajar Desain Grafis </a>
-                                                <div class="excerpt">
-                                                    Mulai dari seni, iklan, hingga smartphone, kehidupan kita tak pernah... </div>
+                                            <div class="excerpt">
+                                                Mulai dari seni, iklan, hingga smartphone, kehidupan kita tak pernah...
+                                            </div>
                                             </p>
                                         </div>
                                         <div class="jv-article-date">
@@ -425,9 +426,10 @@
                                     <div class="jv-article-body">
                                         <div class="jv-article-txt">
                                             <p><a href="https://japanview.tv/id/topics/15880/">
-                                                Belajar Bahasa Jepang </a>
-                                                <div class="excerpt">
-                                                    Bahasa Jepang cukup terkenal dari berbagai negara dikarenakan anime dan...</div>
+                                                    Belajar Bahasa Jepang </a>
+                                            <div class="excerpt">
+                                                Bahasa Jepang cukup terkenal dari berbagai negara dikarenakan anime
+                                                dan...</div>
                                             </p>
                                         </div>
                                         <div class="jv-article-date">
@@ -444,9 +446,10 @@
                                     <div class="jv-article-body">
                                         <div class="jv-article-txt">
                                             <p><a href="https://japanview.tv/id/topics/14449/">
-                                                Belajar Anime dan Manga </a>
-                                                <div class="excerpt">
-                                                    Mulai dari seni, iklan, hingga smartphone, kehidupan kita tak pernah... </div>
+                                                    Belajar Anime dan Manga </a>
+                                            <div class="excerpt">
+                                                Mulai dari seni, iklan, hingga smartphone, kehidupan kita tak pernah...
+                                            </div>
                                             </p>
                                         </div>
                                         <div class="jv-article-date">
@@ -456,7 +459,7 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                     </div>
                     <!-- If we need navigation buttons -->
                     <div class="swiper-button-prev"></div>
@@ -469,7 +472,7 @@
             <div class="btn-primary" data-aos="fade-up"><a href="/id/topics/?topics_category=feature"
                     class="btn-feature">
                     See More </a></div>
-                    <!-- LEARN JAPANESE -->
+            <!-- LEARN JAPANESE -->
             <div class="learn-japanese">
                 <div class="title">
                     <div class="tittle-kiri">
@@ -484,12 +487,13 @@
                             <!--Item-->
                             <div class="news-kiri">
                                 <div class="jv-desc-item">
-                                    <div class="jv-desc-img lj-1"> <a href="https://japanview.tv/id/learn_japanese/19734/"></a>
+                                    <div class="jv-desc-img lj-1"> <a
+                                            href="https://japanview.tv/id/learn_japanese/19734/"></a>
                                     </div>
                                     <div class="jv-desc-body body-news">
                                         <div class="jv-desc-txt">
                                             <p><a href="https://japanview.tv/id/learn_japanese/19734/">
-                                                Universitas Bina Nusantara (BINUS University) </a>
+                                                    Universitas Bina Nusantara (BINUS University) </a>
                                             </p>
                                         </div>
                                         <div class="jv-desc-date">
@@ -500,12 +504,13 @@
                                 <!--//Item-->
                                 <!--Item-->
                                 <div class="jv-desc-item">
-                                    <div class="jv-desc-img lj-3"> <a href="https://japanview.tv/id/learn_japanese/19720/"></a>
+                                    <div class="jv-desc-img lj-3"> <a
+                                            href="https://japanview.tv/id/learn_japanese/19720/"></a>
                                     </div>
                                     <div class="jv-desc-body body-news">
                                         <div class="jv-desc-txt">
                                             <p><a href="https://japanview.tv/id/learn_japanese/19720/">
-                                                Universitas Darma Persada</a>
+                                                    Universitas Darma Persada</a>
                                             </p>
                                         </div>
                                         <div class="jv-desc-date">
@@ -514,16 +519,17 @@
                                     </div>
                                 </div>
                             </div>
-                                <!--//Item-->
-                                <!--Item-->
+                            <!--//Item-->
+                            <!--Item-->
                             <div class="news-kanan">
                                 <div class="jv-desc-item">
-                                    <div class="jv-desc-img lj-2"> <a href="https://japanview.tv/id/learn_japanese/19647/"></a>
+                                    <div class="jv-desc-img lj-2"> <a
+                                            href="https://japanview.tv/id/learn_japanese/19647/"></a>
                                     </div>
                                     <div class="jv-desc-body body-news">
                                         <div class="jv-desc-txt">
                                             <p><a href="https://japanview.tv/id/learn_japanese/19647/">
-                                                Universitas Al-Azhar Indonesia</a>
+                                                    Universitas Al-Azhar Indonesia</a>
                                             </p>
                                         </div>
                                         <div class="jv-desc-date">
@@ -532,6 +538,148 @@
                                     </div>
                                 </div>
                                 <!--//Item-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--More-->
+                <div class="btn-primary" data-aos="fade-up"><a href="/id/topics/?topics_category=feature"
+                        class="btn-feature">
+                        See More </a></div>
+                <!-- EXPERIENCE -->
+                <div class="experience">
+                    <div class="title title-2">
+                        <div class="tittle-kiri title-2-kiri">
+                            <span>
+                                <h1>Experience</h1>
+                            </span>
+                            <span class="desc-2">Memperkenalkan Tempat Wisata di Jepang</span>
+                        </div>
+                    </div>
+                    <div class="experience-content">
+                        <div class="container">
+                            <div class="tab-trigger">
+                                <ul>
+                                    <li><label for="tab1">MUSEUM</label></li>
+                                    <li><label for="tab2">AQUARIUM & ZOO</label></li>
+                                </ul>
+                            </div>
+                            <div class="tab-container-wrap">
+                                <input type="radio" checked id="tab-1" name="1">
+                                <div class="tab-content-box">
+                                    <!--Item-->
+                                    <div class="jv-desc-item">
+                                        <div class="jv-desc-img experience-1"> <a
+                                                href="https://japanview.tv/id/odekake/19105/"></a>
+                                        </div>
+                                        <div class="jv-desc-body body-news">
+                                            <div class="jv-desc-txt">
+                                                <p><a href="https://japanview.tv/id/odekake/19105/">
+                                                        Oita Prefectural Art Museum</a>
+                                                    <span class="excerpt">
+                                                        Museum seni berkonsep “museum 5 indra dan pertemuan”.... </span>
+                                                </p>
+                                                <ul class="jv-list-tags">
+                                                    <li class="f_kyushu "><a
+                                                            href="https://japanview.tv/id/prefectures/kyushu_id/">Kyushu</a>
+                                                    </li>
+                                                    <li class="f_oita "><a
+                                                            href="https://japanview.tv/id/prefectures/oita_id/">Oita</a>
+                                                    </li>
+                                                    <li class="f_art_museum "><a
+                                                            href="https://japanview.tv/id/facility_genre/art_museum_id/">Art
+                                                            Museum</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="jv-desc-date">
+                                            <p>2022.02.21</p>
+                                        </div>
+                                    </div>
+                                <!--//Item-->
+                                <!--Item-->
+                                <div class="jv-desc-item">
+                                    <div class="jv-desc-img experience-2"> <a
+                                            href="https://japanview.tv/id/odekake/19102/"></a>
+                                    </div>
+                                    <div class="jv-desc-body body-news">
+                                        <div class="jv-desc-txt">
+                                            <p><a href="https://japanview.tv/id/odekake/19102/">
+                                                    Yufuin Stained Glass Museum</a>
+                                                <span class="excerpt">
+                                                    Museum yang berfokus mempamerkan kaca patri. Pameran dibagi...
+                                                </span>
+                                            </p>
+                                        </div>
+                                        <div class="jv-desc-date">
+                                            <p>2022.02.2</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                                <!--//Item-->
+                            </div>
+                            <input type="radio" id="tab-2" name="1">
+                            <div class="tab-content-box">
+                                <!--Item-->
+                                <div class="jv-desc-item">
+                                    <div class="jv-desc-img experience-3"> <a
+                                            href="https://japanview.tv/id/odekake/19062/"></a>
+                                    </div>
+                                    <div class="jv-desc-body body-news">
+                                        <div class="jv-desc-txt">
+                                            <p><a href="https://japanview.tv/id/odekake/19062/">
+                                                    National Okinawa Memorial Park (Kaiyohaku Park): Okinawa Churaumi
+                                                    Aquarium</a>
+                                                <span class="excerpt">
+                                                    Akuarium yang berlokasi di dalam taman nasional Okinawa... </span>
+                                            </p>
+                                            <ul class="jv-list-tags">
+                                                <li class="f_okinawa "><a
+                                                        href="https://japanview.tv/id/prefectures/okinawa_id/">Okinawa</a>
+                                                </li>
+                                                <li class="f_aquarium "><a
+                                                        href="https://japanview.tv/id/facility_genre/aquarium_id/">Aquarium</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="jv-desc-date">
+                                        <p>2022.02.21</p>
+                                    </div>
+                                </div>
+                            <!--//Item-->
+                            <!--Item-->
+                            <div class="jv-desc-item">
+                                <div class="jv-desc-img experience-4"> <a
+                                        href="https://japanview.tv/id/odekake/19057/"></a>
+                                </div>
+                                <div class="jv-desc-body body-news">
+                                    <div class="jv-desc-txt">
+                                        <p><a href="https://japanview.tv/id/odekake/19057/">
+                                                Okinawa Zoo & Museum</a>
+                                            <span class="excerpt">
+                                                Okinawa Zoo & Museum merupakan sebuah taman hiburan... </span>
+                                        </p>
+                                        <ul class="jv-list-tags">
+                                            <li class="f_okinawa "><a
+                                                    href="https://japanview.tv/id/prefectures/okinawa_id/">Okinawa</a>
+                                            </li>
+                                            <li class="f_zoo "><a
+                                                    href="https://japanview.tv/id/facility_genre/zoo_id/">Zoo</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="jv-desc-date">
+                                        <p>2022.02.21</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                            <!--//Item-->
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- Swiper JS -->
             <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
