--- a/index.html
+++ b/index.html
@@ -205,19 +205,19 @@
         <div class="main-content">
             <div class="video">
                 <div class="title">
-                    <div class="tittle-kiri">
+                    <div class="tittle-left">
                         <span>
                             <h1>Video</h1>
                         </span>
                         <span class="desc"> Jalan-jalan di Tokyo</span>
                     </div>
-                    <div class="tittle-kanan">
+                    <div class="tittle-right">
                         <a href=""><b>
                                 Baca Profile Riku The Traveller</b></a>
                     </div>
                 </div>
                 <div class="video-content">
-                    <div class="video-kiri">
+                    <div class="video-left">
                         <div class="jv-video-img video-1">
                             <a href="https://japanview.tv/id/videos/19427/" class="lightbox"></a>
                         </div>
@@ -234,7 +234,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="video-kanan">
+                    <div class="video-right">
                         <div class="jv-video-img video-2">
                             <a href="https://japanview.tv/id/videos/19309/" class="lightbox"></a>
                         </div>
@@ -275,7 +275,7 @@
             <!-- NEWS -->
             <div class="news">
                 <div class="title">
-                    <div class="tittle-kiri">
+                    <div class="tittle-left">
                         <span>
                             <h1>News</h1>
                         </span>
@@ -285,7 +285,7 @@
                     <div class="jv-wrapper-news">
                         <div class="jv-list list-news">
                             <!--Item-->
-                            <div class="news-kiri">
+                            <div class="news-left">
                                 <div class="jv-desc-item">
                                     <div class="jv-desc-img news-1"> <a href="https://japanview.tv/id/news/19711/"></a>
                                     </div>
@@ -320,7 +320,7 @@
                             </div>
                             <!--//Item-->
                             <!--Item-->
-                            <div class="news-kanan">
+                            <div class="news-right">
                                 <div class="jv-desc-item">
                                     <div class="jv-desc-img news-3"> <a href="https://japanview.tv/id/news/19568/"></a>
                                     </div>
@@ -368,7 +368,7 @@
             <!-- Article -->
             <div class="article">
                 <di v class="title">
-                    <div class="tittle-kiri">
+                    <div class="tittle-left">
                         <span>
                             <h1>Articles</h1>
                         </span>
@@ -475,7 +475,7 @@
             <!-- LEARN JAPANESE -->
             <div class="learn-japanese">
                 <div class="title">
-                    <div class="tittle-kiri">
+                    <div class="tittle-left">
                         <span>
                             <h1>Learn Japanese</h1>
                         </span>
@@ -485,7 +485,7 @@
                     <div class="jv-wrapper-news">
                         <div class="jv-list list-news">
                             <!--Item-->
-                            <div class="news-kiri">
+                            <div class="news-left">
                                 <div class="jv-desc-item">
                                     <div class="jv-desc-img lj-1"> <a
                                             href="https://japanview.tv/id/learn_japanese/19734/"></a>
@@ -521,7 +521,7 @@
                             </div>
                             <!--//Item-->
                             <!--Item-->
-                            <div class="news-kanan">
+                            <div class="news-right">
                                 <div class="jv-desc-item">
                                     <div class="jv-desc-img lj-2"> <a
                                             href="https://japanview.tv/id/learn_japanese/19647/"></a>
@@ -549,7 +549,7 @@
                 <!-- EXPERIENCE -->
                 <div class="experience">
                     <div class="title title-2">
-                        <div class="tittle-kiri title-2-kiri">
+                        <div class="tittle-left title-2-left">
                             <span>
                                 <h1>Experience</h1>
                             </span>
@@ -568,7 +568,7 @@
                                 <input type="radio" checked id="tab-1" name="1">
                                 <div class="tab-content-box">
                                     <!--Item-->
-                                    <div class="jv-desc-item">
+                                    <div class="jv-experience-item">
                                         <div class="jv-desc-img experience-1"> <a
                                                 href="https://japanview.tv/id/odekake/19105/"></a>
                                         </div>
@@ -576,8 +576,8 @@
                                             <div class="jv-desc-txt">
                                                 <p><a href="https://japanview.tv/id/odekake/19105/">
                                                         Oita Prefectural Art Museum</a>
-                                                    <span class="excerpt">
-                                                        Museum seni berkonsep “museum 5 indra dan pertemuan”.... </span>
+                                                <div class="excerpt">
+                                                    Museum seni berkonsep “museum 5 indra dan pertemuan”.... </div>
                                                 </p>
                                                 <ul class="jv-list-tags">
                                                     <li class="f_kyushu "><a
@@ -591,91 +591,104 @@
                                                             Museum</a></li>
                                                 </ul>
                                             </div>
+                                            <div class="jv-desc-date">
+                                                <p>2022.02.21</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--//Item-->
+                                    <!--Item-->
+                                    <div class="jv-experience-item">
+                                        <div class="jv-desc-img experience-2"> <a
+                                                href="https://japanview.tv/id/odekake/19102/"></a>
+                                        </div>
+                                        <div class="jv-desc-body body-news">
+                                            <div class="jv-desc-txt">
+                                                <p><a href="https://japanview.tv/id/odekake/19102/">
+                                                        Yufuin Stained Glass Museum</a>
+                                                <div class="excerpt">
+                                                    Museum yang berfokus mempamerkan kaca patri. Pameran dibagi...
+                                                </div>
+                                                </p>
+                                                <ul class="jv-list-tags">
+                                                    <li class="f_kyushu "><a
+                                                            href="https://japanview.tv/id/prefectures/kyushu_id/">Kyushu</a>
+                                                    </li>
+                                                    <li class="f_oita "><a
+                                                            href="https://japanview.tv/id/prefectures/oita_id/">Oita</a>
+                                                    </li>
+                                                    <li class="f_art_museum "><a
+                                                            href="https://japanview.tv/id/facility_genre/art_museum_id/">Art
+                                                            Museum</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="jv-desc-date">
+                                                <p>2022.02.2</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--//Item-->
+                                <input type="radio" id="tab-2" name="1">
+                                <div class="tab-content-box">
+                                    <!--Item-->
+                                    <div class="jv-experience-item">
+                                        <div class="jv-desc-img experience-3"> <a
+                                                href="https://japanview.tv/id/odekake/19062/"></a>
+                                        </div>
+                                        <div class="jv-desc-body body-news">
+                                            <div class="jv-desc-txt">
+                                                <p><a href="https://japanview.tv/id/odekake/19062/">
+                                                        National Okinawa Memorial Park (Kaiyohaku Park): Okinawa
+                                                        Churaumi
+                                                        Aquarium</a>
+                                                <div class="excerpt">
+                                                    Akuarium yang berlokasi di dalam taman nasional Okinawa... </div>
+                                                </p>
+                                                <ul class="jv-list-tags">
+                                                    <li class="f_okinawa "><a
+                                                            href="https://japanview.tv/id/prefectures/okinawa_id/">Okinawa</a>
+                                                    </li>
+                                                    <li class="f_aquarium "><a
+                                                            href="https://japanview.tv/id/facility_genre/aquarium_id/">Aquarium</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
                                         </div>
                                         <div class="jv-desc-date">
                                             <p>2022.02.21</p>
                                         </div>
                                     </div>
+                                    <!--//Item-->
+                                    <!--Item-->
+                                    <div class="jv-experience-item">
+                                        <div class="jv-desc-img experience-4"> <a
+                                                href="https://japanview.tv/id/odekake/19057/"></a>
+                                        </div>
+                                        <div class="jv-desc-body body-news">
+                                            <div class="jv-desc-txt">
+                                                <p><a href="https://japanview.tv/id/odekake/19057/">
+                                                        Okinawa Zoo & Museum</a>
+                                                <div class="excerpt">
+                                                    Okinawa Zoo & Museum merupakan sebuah taman hiburan... </div>
+                                                </p>
+                                                <ul class="jv-list-tags">
+                                                    <li class="f_okinawa "><a
+                                                            href="https://japanview.tv/id/prefectures/okinawa_id/">Okinawa</a>
+                                                    </li>
+                                                    <li class="f_zoo "><a
+                                                            href="https://japanview.tv/id/facility_genre/zoo_id/">Zoo</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="jv-desc-date">
+                                                <p>2022.02.21</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <!--//Item-->
-                                <!--Item-->
-                                <div class="jv-desc-item">
-                                    <div class="jv-desc-img experience-2"> <a
-                                            href="https://japanview.tv/id/odekake/19102/"></a>
-                                    </div>
-                                    <div class="jv-desc-body body-news">
-                                        <div class="jv-desc-txt">
-                                            <p><a href="https://japanview.tv/id/odekake/19102/">
-                                                    Yufuin Stained Glass Museum</a>
-                                                <span class="excerpt">
-                                                    Museum yang berfokus mempamerkan kaca patri. Pameran dibagi...
-                                                </span>
-                                            </p>
-                                        </div>
-                                        <div class="jv-desc-date">
-                                            <p>2022.02.2</p>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
-                                <!--//Item-->
-                            </div>
-                            <input type="radio" id="tab-2" name="1">
-                            <div class="tab-content-box">
-                                <!--Item-->
-                                <div class="jv-desc-item">
-                                    <div class="jv-desc-img experience-3"> <a
-                                            href="https://japanview.tv/id/odekake/19062/"></a>
-                                    </div>
-                                    <div class="jv-desc-body body-news">
-                                        <div class="jv-desc-txt">
-                                            <p><a href="https://japanview.tv/id/odekake/19062/">
-                                                    National Okinawa Memorial Park (Kaiyohaku Park): Okinawa Churaumi
-                                                    Aquarium</a>
-                                                <span class="excerpt">
-                                                    Akuarium yang berlokasi di dalam taman nasional Okinawa... </span>
-                                            </p>
-                                            <ul class="jv-list-tags">
-                                                <li class="f_okinawa "><a
-                                                        href="https://japanview.tv/id/prefectures/okinawa_id/">Okinawa</a>
-                                                </li>
-                                                <li class="f_aquarium "><a
-                                                        href="https://japanview.tv/id/facility_genre/aquarium_id/">Aquarium</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="jv-desc-date">
-                                        <p>2022.02.21</p>
-                                    </div>
-                                </div>
-                            <!--//Item-->
-                            <!--Item-->
-                            <div class="jv-desc-item">
-                                <div class="jv-desc-img experience-4"> <a
-                                        href="https://japanview.tv/id/odekake/19057/"></a>
-                                </div>
-                                <div class="jv-desc-body body-news">
-                                    <div class="jv-desc-txt">
-                                        <p><a href="https://japanview.tv/id/odekake/19057/">
-                                                Okinawa Zoo & Museum</a>
-                                            <span class="excerpt">
-                                                Okinawa Zoo & Museum merupakan sebuah taman hiburan... </span>
-                                        </p>
-                                        <ul class="jv-list-tags">
-                                            <li class="f_okinawa "><a
-                                                    href="https://japanview.tv/id/prefectures/okinawa_id/">Okinawa</a>
-                                            </li>
-                                            <li class="f_zoo "><a
-                                                    href="https://japanview.tv/id/facility_genre/zoo_id/">Zoo</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="jv-desc-date">
-                                        <p>2022.02.21</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                            <!--//Item-->
                         </div>
                     </div>
                 </div>
